fix #49 keep action icon outline visible in dark mode
* svg components loaded on page load contain `fill:#333`, but when they load dynamically after opening a question, they contain `fill: rgb(51, 51, 51)` => update CSS selector to capture both cases
* add a transition for showing/hiding colors

--- a/app/root.css
+++ b/app/root.css
@@ -162,8 +162,12 @@ h1 {
   filter: var(--light, invert(0.2)) var(--dark, invert(1));
 }
 
-.icon-link:not(:hover) svg *:not(path[style*='fill:#333']) {
-  fill: none !important;
+.icon-link svg * {
+  transition: fill 300ms;
+}
+
+.icon-link:not(:hover) svg *:not(path[style*='fill:#333'], path[style*='fill: rgb(51, 51, 51)']) {
+  fill: transparent !important;
 }
 
 .icon-link:hover svg {
